--- a/portofolio1.html
+++ b/portofolio1.html
@@ -80,7 +80,7 @@
 </head>
 <body>
   <header>
-    <h1>Halo, ridhoo👋</h1>
+    <h1>ridhoo👋</h1>
     <p>Pelajar yang suka teknologi, desain, dan coding 💻</p>
   </header>
 
