--- a/portofolio2.html
+++ b/portofolio2.html
@@ -143,20 +143,20 @@
 <body>
   <header>
     <img src="WIN_20250714_03_28_14_Pro.jpg" alt="Foto Fajar" class="profile-pic" />
-    <h1>Halo, Saya ridho👋</h1>
+    <h1>Halo, Saya ridho</h1>
     <p>Pelajar yang suka teknologi, desain, dan coding dan playing fotball 💻</p>
   </header>
 
   <section class="about">
-    <h2>Tentang Saya</h2>
-    <p>Saya adalah pelajar SMA yang suka membangun website dan desain UI/UX. Saya senang mencoba hal baru dan belajar bahasa pemrograman seperti HTML, CSS, dan Python.</p>
+    <h2>about me</h2>
+    <p>Saya adalah siswa SMK ibnul qayyim makassar yang gemar membangun website dan desain UI/UX. Saya senang mencoba hal baru dan belajar bahasa pemrograman seperti HTML, CSS, dan Python.</p>
   </section>
 
   <section class="projects">
     <h2>Proyek Saya</h2>
     <div class="project">
-      <h3>Kalkulator Web</h3>
-      <p>Saya membuat kalkulator sederhana dengan HTML dan CSS. Desainnya minimalis, cocok untuk latihan logika dan tampilan.</p>
+      <h3>WEBSITE</h3>
+      <p>Saya dan tim saya membuat projek website SAC yaitu sulawsi agro connection .</p>
     </div>
     <div class="project">
       <h3>Poster Edukasi Digital</h3>
@@ -166,7 +166,7 @@
 
   <section class="contact">
     <h2>Kontak</h2>
-    <p>Email: fajar@email.com</p>
+    <p>Email: ridhotullah@email.com</p>
     <div class="social-icons">
       <a href="https://instagram.com/fajar" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="mailto:fajar@email.com"><i class="fas fa-envelope"></i></a>
@@ -175,10 +175,12 @@
   </section>
 
   <footer>
-    <p>© 2025 Fajar. Dibuat dengan semangat belajar dan coding!</p>
+    <p>© 2025 ridho. Dibuat dengan semangat belajar dan coding!</p>
   </footer>
 
   <button class="toggle-button" onclick="toggleDarkMode()">🌓 Mode Gelap</button>
+  
+  
 
   <script>
     function toggleDarkMode() {
